# awk

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustfmt.toml
.github/workflows/: GnuComment.yml  GnuTests.yml  ci.yml  code-quality.yml  low-priority-targets.yml
interpreter/: Cargo.toml
interpreter/src/: ir.rs  lib.rs  types.rs  vm.rs
interpreter/src/ir/: lower.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  locale_encoding.rs  tests.rs
parser/: Cargo.toml
parser/src/: ast.rs  diagnostics.rs  idempotency.rs  keywords.rs  lex.rs  lib.rs  pratt.rs  prop_tests.rs  sexpr.rs  tests.rs
parser/src/testing/: ast_gen.rs  mod.rs
parser/src/tests/: ast_gen.rs  prop_tests.rs  utils.rs
src/: cli.rs  event.rs  main.rs  utils.rs
tests/: awk.rs  grcat.rs  pwcat.rs
tests/by-util/: test_awk.rs
util/: fetch-gnu.sh  run-gnu-testsuite.sh
