[package]
name = "interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
either.workspace = true
memchr.workspace = true
thiserror.workspace = true
tracing.workspace = true
parser.workspace = true
bumpalo.workspace = true
allocator-api2.workspace = true
hashbrown.workspace = true
ahash.workspace = true
regex.workspace = true
# I'm not particularly happy about this, but it's crucial for performance, and
# I have audited the two commits. It's pinned to that hash to avoid possible
# supply-chain attacks. Hopefully upstream maintainers will change their mind.
indexmap-allocator-api = { git = 'https://github.com/Hans-Halverson/indexmap-allocator-api.git', rev = "36852f985c01fb9f58f2d9e510655ca1dbb1f4d0" }

[lints]
workspace = true
